// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r-modal.vue should render Wrapper and match snapshot 1`] = `
<div tabindex="0" name="modal">
  <div class="r-modal-overlay">
    <r-loader-stub show="true" loading="true" class="r-modal-loader is-loading"></r-loader-stub>
  </div>
</div>
`;

exports[`r-modal.vue should render via SSR and match snapshot 1`] = `
<div tabindex="0" name="modal">
  <div class="r-modal-overlay">
    <div class="r-component r-loader r-modal-loader is-loading r-loader--loading">
      <div class="wrapper">
        <div class="mr-re"></div>
        <div class="mr-bil"></div>
        <div class="mr-ly"></div>
      </div>
    </div>
  </div>
</div>
`;
